test branch from vs code

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
        </section>
        <section id="winLose"></section>
 
+       <span>test</span>
        
     </main>
     <script src="js/index.js"></script>
