Implement win/lose, update ui

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span>Lives Remaining: </span>
         <span id="livesCounter"></span>
       </section>
-      <section id="hiddenWord"></section>
+      <section id="hiddenWord" class="hiddenWord"></section>
        <section id="keyboard" class="keysContainer"></section>
        <section id="controls">
         <button id="newGame">Start</button>
